# SDL_ttf

./: .clang-format  .cvsignore  .gitignore  .gitmodules  .hgignore  .wikiheaders-options  Android.mk  CHANGES  CHANGES.txt  CMakeLists.txt  COPYING  COPYING.txt  Makefile.am  Makefile.in  Makefile.os2  README  README.md  README.txt  SDL2_ttf-config.cmake.in  SDL2_ttf.spec  SDL2_ttf.spec.in  SDL2_ttfConfig.cmake.in  SDL3_ttf.pc.in  SDL3_ttfConfig.cmake.in  SDL_ttf.c  SDL_ttf.h  SDL_ttf.pc.in  SDL_ttf.spec.in  SDL_ttf.sym  aclocal.m4  autogen.sh  build.zig  build.zig.zon  configure  configure.ac  configure.in  glfont.c  release_checklist.md  sdl2_ttf-config.cmake.in  sdl3_ttf-config-version.cmake.in  (+5 more)
.github/workflows/: main.yml  release.yml
VisualC/: SDL_ttf.dsp  SDL_ttf.dsw  SDL_ttf.sln  SDL_ttf.vcproj  SDL_ttf.vcxproj  SDL_ttf.vcxproj.filters  SDL_ttf_VS2008.vcproj  SDL_ttf_VS2013.sln  SDL_ttf_VS2013.vcxproj  Version.rc
VisualC-WinRT/: SDL_ttf-UWP.sln  SDL_ttf-UWP.vcxproj  SDL_ttf-UWP.vcxproj.filters
VisualC-WinRT/WinPhone80_VS2012/: SDL_ttf-WinPhone80.vcxproj  freetype-WinPhone80.vcxproj  freetype-WinPhone80.vcxproj.filters
VisualC-WinRT/WinPhone81_VS2013/: SDL_ttf-WinPhone81.vcxproj  freetype-WinPhone81.vcxproj  freetype-WinPhone81.vcxproj.filters
VisualC-WinRT/WinRT80_VS2012/: SDL_ttf-WinRT80.vcxproj  freetype-WinRT80.vcxproj  freetype-WinRT80.vcxproj.filters
VisualC-WinRT/WinRT81_VS2013/: SDL_ttf-WinRT81.vcxproj  freetype-WinRT81.vcxproj  freetype-WinRT81.vcxproj.filters
VisualC/FreeType/lib/: libfreetype.lib
VisualC/glfont/: glfont.dsp  glfont.vcproj  glfont.vcxproj  glfont_VS2008.vcproj  glfont_VS2013.vcxproj
VisualC/pkg-support/cmake/: sdl2_ttf-config-version.cmake  sdl2_ttf-config.cmake  sdl3_ttf-config-version.cmake  sdl3_ttf-config.cmake
VisualC/showfont/: showfont.dsp  showfont.vcproj  showfont.vcxproj  showfont_VS2013.vcxproj
Xcode/: Info-Framework.plist  Info-Framework__Upgraded_.plist  mkxcode.csh
Xcode-iOS/SDL_ttf.xcodeproj/: project.pbxproj
Xcode/Frameworks/FreeType.framework/Versions/A/: FreeType
Xcode/Frameworks/FreeType.framework/Versions/A/Resources/: Info.plist
Xcode/Frameworks/FreeType.framework/Versions/A/Resources/English.lproj/: InfoPlist.strings
Xcode/SDL_ttf.xcodeproj/: project.pbxproj
Xcode/glfont/glfont.pbproj/: project.pbxproj
Xcode/glfont/glfont.xcodeproj/: project.pbxproj
Xcode/iOS/FreeType.framework/: Info.plist
Xcode/macOS/FreeType.framework/Versions/A/: FreeType
Xcode/macOS/FreeType.framework/Versions/A/Resources/: Info.plist
Xcode/macOS/SDL2.framework/Versions/A/: SDL2
Xcode/macOS/SDL2.framework/Versions/A/Resources/: Info.plist
Xcode/macOS/SDL2.framework/Versions/A/_CodeSignature/: CodeResources
Xcode/pkg-support/resources/: ReadMe.txt
Xcode/pkg-support/resources/CMake/: SDL3_ttfConfig.cmake  SDL3_ttfConfigVersion.cmake  sdl2_ttf-config-version.cmake  sdl2_ttf-config.cmake  sdl3_ttf-config.cmake
Xcode/pkg-support/share/cmake/SDL3_ttf/: SDL3_ttfConfig.cmake  SDL3_ttfConfigVersion.cmake
Xcode/showfont/showfont.xcodeproj/: project.pbxproj
Xcode/tvOS/FreeType.framework/: Info.plist  LICENSE.freetype.txt
Xcode/tvOS/FreeType.framework/Headers/freetype/config/: ftoption.h
Xcode_iOS/SDL_ttf/SDL_ttf.xcodeproj/: project.pbxproj
acinclude/: freetype2.m4
build-scripts/: SDL_migration.cocci  build-release.py  release-info.json  test-versioning.sh  touch-autofoo.sh
build-scripts/pkg-support/android/aar/cmake/: SDL3_ttfConfig.cmake
build-scripts/pkg-support/android/cmake/: SDL3_ttfConfig.cmake
build-scripts/pkg-support/msvc/cmake/: SDL3_ttfConfig.cmake.in
cmake/: Findplutosvg.cmake  Findplutovg.cmake  PrivateSdlFunctions.cmake  SDL3_ttfConfig.cmake.in  sdl3-ttf.pc.in
cmake/test/: CMakeLists.txt  main.c
debian/: changelog  control  copyright  libsdl2-ttf-dev.install  libsdl2-ttf.install
docs/: INTRO-cmake.md  INTRO-emscripten.md  INTRO-visualstudio.md  INTRO-xcode.md  README-migration.md  hello-textengine.c  hello.c
examples/: Atlas.cpp  AtlasLoadAll.c  SDL_math3d.h  editbox.c  editbox.h  glfont.c  showfont.c  showfps.c  testapp.c  testgltext.c  testgputext.c  variablefont.c
examples/testgputext/: SDL_math3d.h  build-shaders.sh  shader.frag.spv
examples/testgputext/fonts/: license.txt
examples/testgputext/shaders/: build-shaders.sh  dxbc50.h  dxil60.h  metal.h  shader-sdf.frag.dxil  shader-sdf.frag.dxil.h  shader-sdf.frag.msl  shader-sdf.frag.spv  shader-solid.frag.dxil.h  shader-solid.frag.hlsl  shader-solid.frag.msl.h  shader-solid.frag.spv.h  shader.frag  shader.frag.dxil  shader.frag.dxil.h  shader.frag.metal  shader.frag.metal.h  shader.frag.msl  shader.frag.sm50.dxbc.h  shader.frag.sm50.hlsl  shader.frag.sm60.dxil.h  shader.frag.sm60.hlsl  shader.frag.spv  shader.frag.spv.h  shader.vert  shader.vert.dxil  shader.vert.dxil.h  shader.vert.metal  shader.vert.metal.h  shader.vert.msl  shader.vert.sm50.dxbc.h  shader.vert.sm50.hlsl  shader.vert.sm60.dxil.h  shader.vert.sm60.hlsl  shader.vert.spv  shader.vert.spv.h  spir-v.h
include/SDL3/: SDL_ttf.h
include/SDL3_ttf/: SDL_textengine.h  SDL_ttf.h
mingw/pkg-support/: Makefile
src/: SDL_gl_textengine.c  SDL_gpu_textengine.c  SDL_hashtable.c  SDL_hashtable.h  SDL_hashtable_names.h  SDL_hashtable_ttf.c  SDL_hashtable_ttf.h  SDL_renderer_textengine.c  SDL_surface_textengine.c  SDL_ttf.c  SDL_ttf.exports  SDL_ttf.sym  genexports.py  stb_rect_pack.h  version.rc
test/: main.c
